Closed Bug 496770 Opened 17 years ago Closed 17 years ago

Outer glows of default buttons are not drawn

Categories

(Core :: Widget: Gtk, defect)

x86
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla1.9.2a1

People

(Reporter: ventnor.bugzilla, Assigned: ventnor.bugzilla)

References

Details

Attachments

(1 file, 1 obsolete file)

Attached patch Patch (obsolete) — Splinter Review
After playing around with this brilliant New Wave theme some more, I noticed that one of the last inconsistencies we have is that we don't draw default button indicators if they are outside the button. After looking into this, I figured out how to make them work, which should fix other themes in a similar situation too. I also changed a bit of code to match what GTK does more carefully.
Attachment #381990 - Flags: superreview?(roc)
Attachment #381990 - Flags: review?(roc)
Attachment #381990 - Flags: superreview?(roc)
Attachment #381990 - Flags: superreview+
Attachment #381990 - Flags: review?(roc)
Attachment #381990 - Flags: review+
Keywords: checkin-needed
Whiteboard: [needs landing]
Comment on attachment 381990 [details] [diff] [review] Patch This leaks. Silly me.
Attachment #381990 - Attachment is obsolete: true
Attached patch Patch 1.000001Splinter Review
This adds a necessary gtk_border_free(). Nothing else changed.
Status: NEW → RESOLVED
Closed: 17 years ago
Keywords: checkin-needed
Resolution: --- → FIXED
Whiteboard: [needs landing]
Target Milestone: --- → mozilla1.9.2a1
Depends on: 528769
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: