Bug 496770. Take GTK default button indicator metrics into account when computing overflow area for buttons. r=roc